Updated fixed minor alignment issue in inputs

--- a/src/sass/3/openeyes/__config-classic.scss
+++ b/src/sass/3/openeyes/__config-classic.scss
@@ -163,7 +163,7 @@ $oe-dark-bg:				$oe-dark-blue-dark2; // top header strip
 $sidebar-event-selected: rgb(10,100,155);;
 $sidebar-event-selected-text: rgb(255,255,255);
 
-$oe-element-selector-green:	rgb(10,110,10);
+$oe-element-selector-green: rgb(41, 100, 40);
 
 $oe-sem-main-event-bg: 		rgb(245,245,245);   // was oe-blue but needed to tweak the colour balance
 $oe-sem-element-bg: 		rgb(220,220,220);	// removed 2 colour scheme (priority/normal) made bg 1 colour
