--- a/src/sass/3/openeyes/inputs/__all.scss
+++ b/src/sass/3/openeyes/inputs/__all.scss
@@ -6,6 +6,7 @@
 // default setup for html inputs: 
 @import "_base";
 @import "label";
+@import "placeholders";
 @import "input";
 @import "textarea";
 @import "select";
