--- a/src/sass/3/openeyes/components/sem/sidebar/edit-elements/element-selector/_all-elements.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/edit-elements/element-selector/_all-elements.scss
@@ -14,7 +14,7 @@
 		width:$oe-event-main-default-width;
 		height: #{$element-selector-height - 32px}; // allow for the big close button
 		
-		padding:10px;
+		padding:5px 10px;
 	}		
 	
 }
