--- a/src/sass/3/openeyes/ui/_auto-alert.scss
+++ b/src/sass/3/openeyes/ui/_auto-alert.scss
@@ -3,63 +3,90 @@
 
 
 // OE Auto alerts
-// system generated alerts
-//
+// System generated flags
 .auto-alert {
-	display: inline-block;
-	// default
+	padding: 4px 10px 4px 28px; // allow for icons
+	margin: 3px 0;
+
+	@include font-size(13);
+	font-weight: $oe-font-medium;
 	color: $oe-text;
-	@include font-size(11);
 
 	border: 1.5px solid $oe-line;
-	border-radius: 20px;
-
-	padding: 2px 10px 2px 25px; // allow for
+	border-radius: 15px;
 
 	&.pad-v {
-		margin:5px 0;
+		margin: 5px 0;
 	}
 
+	background: 8px 6px / 12px $oe-text-inverted url(svg-all("i/flag-grey")) no-repeat;
 
-	background: 7px 4px / 11px $oe-text-inverted url(svg-all("i/triangle-grey")) no-repeat;
+	&.inline {
+		@include font-size(11);
+		display: inline-block;
+		padding: 1px 10px 1px 25px;
+		background-position: 8px 3px;
+		background-size: 11px;
+
+		&.dismissible::after {
+			width: 11px;
+			height: 11px;
+			top:3px;
+		}
+	}
 
 	&.green {
-		background-image: url(svg-all("i/triangle-green"));
+		background-image: url(svg-all("i/flag-green"));
 		border-color: $oe-status-green;
-		&.flag {
-			background-image: url(svg-all("i/flag-green"));
-			background-size:12px;
+
+		&.risk {
+			background-image: url(svg-all("i/triangle-green"));
 		}
 	}
 
 	&.red {
-		background-image: url(svg-all("i/triangle-red"));
+		background-image: url(svg-all("i/flag-red"));
 		border-color: $oe-status-red;
-		&.flag {
-			background-image: url(svg-all("i/flag-red"));
-			background-size:12px;
+
+		&.risk {
+			background-image: url(svg-all("i/triangle-red"));
 		}
 	}
 
 	&.amber {
-		background-image: url(svg-all("i/triangle-orange"));
+		background-image: url(svg-all("i/flag-orange"));
 		border-color: $oe-status-amber;
-		&.flag {
-			background-image: url(svg-all("i/flag-orange"));
-			background-size:12px;
+
+		&.risk {
+			background-image: url(svg-all("i/triangle-orange"));
 		}
 	}
 
+	// dismissible
+	&.dismissible {
+		cursor: pointer;
+		position: relative;
+		padding-right: 25px;
 
-	// if there are list of issues or warnings:
-	ul {
-		list-style: disc inside;
-		margin: 5px 0;
+		&::after {
+			content: "";
+			position: absolute;
+			right: 5px;
+			top: 5.5px;
+			width: 15px;
+			height: 15px;
+			background: center / contain url(svg-themed("i/remove-circle")) no-repeat;
+			opacity: 0.5;
+		}
 
-		li {
-			margin-bottom: 3px;
-			&:last-child {
-				margin-bottom: 0;
+		&:focus,
+		&:hover,
+		&:active {
+			background-color: $oe-btn-blue-hint;
+			border-color: $oe-text-light;
+
+			&::after {
+				opacity: 1;
 			}
 		}
 	}
