--- a/src/sass/3/openeyes/ui/typography/_highlighter.scss
+++ b/src/sass/3/openeyes/ui/typography/_highlighter.scss
@@ -10,10 +10,9 @@
 	padding:4px 6px;
 	font-weight:500;
 	border-radius:2px;
-	
-	// when used inline with other text
-	// this will pick up on the display: inline-block
+
 	&.inline {
+		display:inline-block;
 		padding:1px 4px;
 	}
 	
