Fix for Search inputs background colour

--- a/src/sass/3/openeyes/components/sem/elements/__all.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__all.scss
@@ -25,6 +25,7 @@
 @import "typography";					// None, Note, Large-text, etc
 @import "restrict-data-shown";
 @import "eye-icon-header";
+@import "add-user-comments";
 
 // Eyedraw (v2.5)
 @import "eyedraw/_ed25";
