--- a/src/sass/3/openeyes/components/sem/elements/_element-fields-edit.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_element-fields-edit.scss
@@ -24,7 +24,7 @@
 		}
 
 		.add-data-actions {
-			margin: 10px 0 0 0;
+			margin: 10px 0 0 0; // must match add-user-comments padding
 			text-align: right; // think it's OK to do this?
 		}
 
