--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -11,6 +11,7 @@
 .oe-i {
 	display: inline-flex;
 	line-height: 1;
+	vertical-align: middle; // fixes a layout issue in tables
 
 	$size-large: 19px;
 	$size-medium: 16px;
@@ -148,6 +149,7 @@
 		"direction-down-circle": "direction-down-circle",
 		"move": "move",
 		"child-arrow": "child-arrow",
+		"parent-arrow": "parent-arrow",
 		"menu": "menu",
 		"trash": "trash",
 		"trash-blue": "trash-blue",
