--- a/src/sass/3/openeyes/components/popups/add-new-event/standardised/_step-subspecialties.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/standardised/_step-subspecialties.scss
@@ -11,7 +11,8 @@
 			// changing from <table> to flex however,
 			// by following the oe-popup-content approach
 			// allow space for "Add new Subspeciality"
-			height: calc(100vh - 330px); // oe-popup-content is set at 200px
+			height: calc(100vh - 350px); // oe-popup-content is set at 200px
+			max-height: 500px !important; // on a massive monitor it's way to tall!
 			overflow-y: auto;
 			padding:0 0 10px 0;
 		}
