Working on locus

--- a/src/sass/3/openeyes/components/patient/locus/__all.scss
+++ b/src/sass/3/openeyes/components/patient/locus/__all.scss
@@ -1,6 +1,12 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
+// Locus: a center or source, as of activities or power
+// Used in data dense patient tables
 
-@import 'menu-btn';
-@import 'menu-info';
+@import "locus-grid";
+
+
+
+
+
