--- a/src/sass/3/openeyes/__config-classic.scss
+++ b/src/sass/3/openeyes/__config-classic.scss
@@ -11,7 +11,10 @@
 // $oe-dark- prefixed colours are for Light Text on Dark Background
 // -------------------------------------------
 
-$html-bg:				rgb(37,35,35); 
+$html-bg: rgb(37,35,35);
+
+$scroll-track: rgb(95,95,100);
+$scroll-thumb: rgb(170,170,170);
 
 // Text
 $oe-dark-text: 				rgb(220,220,220);
