--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -10,7 +10,10 @@
 // $oe-dark- prefixed colours are for Light Text on Dark Background
 // ----------------------
 
-$html-bg:				rgb(16,25,37);
+$html-bg: rgb(16,25,37);
+
+$scroll-track: rgb(10,10,15);
+$scroll-thumb: rgb(55,55,60);
 
 // Text 
 $oe-dark-text:				rgb(214,214,214);
