--- a/src/sass/3/openeyes/ui/oe-lat-icons/_oe-lat.scss
+++ b/src/sass/3/openeyes/ui/oe-lat-icons/_oe-lat.scss
@@ -9,7 +9,7 @@
 	display: block;
 	height: 13px;
 	width:30px; // allows a 4px center gap
-	margin: 0 4px; // space
+	margin: 0 4px; // space makes up to 38px
 
 	&.inline {
 		display: inline-block;
