New icons: Range and Top

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -171,10 +171,12 @@
 		"comments-who": "comments-who",
 		"start": "start",
 		"stop": "stop",
+		"range": "range",
 		"change": "change",
 		"d-slash": "double-slash",
 		"expand": "expand",
 		"collapse": "collapse",
+		"top":"top",
 		"reduce-height": "reduce-height",
 		"increase-height": "increase-height",
 		"increase-height-orange": "increase-height-orange",
