--- a/src/sass/3/openeyes/components/_logo.scss
+++ b/src/sass/3/openeyes/components/_logo.scss
@@ -35,8 +35,11 @@
 		position:absolute;
 		top:0; 			// allow for padding
 		left:25px;
-		padding:20px; 	// increase hit area
+		height: $oe-header-height;
+		padding:0 20px; 	// increase hit area
 		cursor: pointer;
+
+		@include flex(center, center );
 
 		
 		// SVG logo
