--- a/src/sass/3/openeyes/ui/_oe-date.scss
+++ b/src/sass/3/openeyes/ui/_oe-date.scss
@@ -43,3 +43,10 @@
 	}
 }
 
+// Occasionally, dates are fuzzy or text (e.g. "New", or "On-going")
+.oe-no-date-msg {
+	width: 11ch;
+	text-align: right;
+	font-style: italic;
+}
+
