--- a/src/sass/3/openeyes/inputs/_select.scss
+++ b/src/sass/3/openeyes/inputs/_select.scss
@@ -9,7 +9,7 @@ select {
 	// can be set. This feels a bit hacky but
 	// it achieves the visual goal of getting
 	// <input> and <selects> looking the same
-	padding:0 15px 0 4px; // allow for the backgroud
+	padding:0 15px 0 4px; // allow for the background
 
 	// turn off browser UI defaults
 	// (basically because of Safari!)
