--- a/src/sass/3/openeyes/ui/buttons/__base.scss
+++ b/src/sass/3/openeyes/ui/buttons/__base.scss
@@ -58,6 +58,10 @@
 		background: rgba($oe-grey,0.8) !important;
 		border:1px solid rgba($oe-text-light,0.1);
 		pointer-events: none; // disable pseudos
+
+		.oe-i {
+			opacity: 0.1;
+		}
 	}
 
 	// handle icons in buttons
