Updates to the Hotlist Patient Comments, slight DOM change required for this to work

--- a/src/sass/3/openeyes/components/fast-date/fast-date-range/__base.scss
+++ b/src/sass/3/openeyes/components/fast-date/fast-date-range/__base.scss
@@ -11,8 +11,11 @@
 	.oe-worklists-panel & {
 		margin:10px;
 	} 
-	
+
+	// from / to <inputs>
 	.date-inputs {
+		@include flex(center, space-between);
+		gap:5px;
 		margin: 0 0 5px 0;
 	}
 	
