--- a/src/sass/3/openeyes/__config-classic.scss
+++ b/src/sass/3/openeyes/__config-classic.scss
@@ -69,7 +69,7 @@ $oe-dark-btn-green-hint:		shade( $oe-dark-btn-green,30 );
 $oe-dark-btn-red-hint:		shade( $oe-dark-btn-red,30 );
 
 $oe-btn-text-on-hint: 	rgba(255,255,255,0.8);
-$oe-btn-default: #E6E6FF; // 235,235,240
+$oe-btn-default: #D6E6FE; // 235,235,240
 $oe-btn-selected:		rgb(220,220,230);
 $oe-btn-event-header: 	tint($oe-grey,10); // event header buttons need to work like tabs
 $oe-btn-blue: rgb(40,110,224);
