--- a/src/sass/3/openeyes/ui/collapsible/__all.scss
+++ b/src/sass/3/openeyes/ui/collapsible/__all.scss
@@ -1,21 +1,17 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-// These 2 versions share the same pattern,
-// but uses are slightly different. They
-// were combined into the new "compress" approach
-// (used in various, compressed standardises these, added for v6+)
-@import "collapse-data/header-icon";
+// "group"
+// Used in sidebar Events/Element structure
+// Admin sidebar & occasionally in-page
+// still supported as of v6 but updated to "nav-group"
 @import "_depreciated/collapse-group";
+@import "nav-group/nav-grp-hd-i";
 
-// compress added for v6+ (simplifies data and group)
-// DOM will need updating, continue to support v1 CSS abover
-
-// data: expand / collapse icons
-// group: plus / arrow up icons (sidebar, CVI edit)
-// compress  / compress-hd-i / compress-content
+// "data" (common collapsible)
+// Uses: expand/collapse icons
 @import "collapse-data/_base";
-
+@import "collapse-data/header-icon";
 
 // Pro-data-view
 @import "pro-standard/pro-data-view";
