--- a/src/sass/3/openeyes/ui/collapsible/collapse-data/__base.scss
+++ b/src/sass/3/openeyes/ui/collapsible/collapse-data/__base.scss
@@ -1,16 +1,32 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-// always a <div>
-// 2 flavours: data & group
-// expand/collapse icons (was "data")
-// plus/arrow-up (was group)
+// <div>
+// "data" uses expand/collapse icons
+// most common collapsible DOM, used in-page
+// and used in Patient popups
+
 .collapse-data {
-	// most common approach implementation
+	// default vertical padding
 	margin: 5px 0 10px 0;
+
+	// show the collapse-data area, this includes
+	// some typographics tweaks
+	&.show-bg {
+		background-color: rgba($oe-user-inputs, 0.4);
+		padding:5px 8px;
+
+		.collapse-data-header-icon {
+			@include font-size(14); // match large-text size
+			&.collapse {
+				color:$oe-text;
+			}
+		}
+	}
 }
 
+// Assumed default state for content is hidden
+// JS/DOM can override this with style="display:block"
 .collapse-data-content {
-	// assume default state is hidden!
 	display: none;
 }
