--- a/src/sass/3/openeyes/ui/collapsible/collapse-data/_header-icon.scss
+++ b/src/sass/3/openeyes/ui/collapsible/collapse-data/_header-icon.scss
@@ -1,10 +1,8 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-
-// Collapse DATA
-// Provides a DOM structure to show/hide
-// data content in UI. No containing visual
+// Wrapped with .collapse-data
+// Provides the DOM controls to hide/show content
 // UI, uses expand/collapse icons
 
 .collapse-data-header-icon {
@@ -13,14 +11,16 @@
 	padding: 5px 20px 5px 0; // allow space for icon
 	color: $oe-element-headers;
 
-	// compress used in patient popups
+	// used in patient popups (dark themed)
 	.oe-patient-popup & {
 		color: $oe-dark-text-light;
-		margin-bottom: 15px;
 		@include font-size(12);
 	}
 
-	// JS
+	// as User regularly interact with this turn off selection
+	user-select: none;
+
+	// JS, only hook into events on the <div>
 	* {
 		pointer-events: none;
 	}
@@ -32,8 +32,8 @@
 		position: absolute;
 		top: 0;
 		bottom: 0;
-		right: 2px; // visual alignment tweak
-		width: 15px;
+		right: 0;
+		width: 13px;
 
 		// icons: expand / collapse
 		// assumed default state is that the content is collapsed
@@ -46,10 +46,11 @@
 		opacity: $oe-icon-opacity; //  now i can use opacity
 	}
 
-	// '.expand' is the default icon state, as content should be hidden
-	// no need to explicitly state the 'expand class', JS will add this.
+	// &.expand (default state)
+	// no explicit styles for 'expand' class.
+	// .collapse, does need updating:
 	&.collapse {
-		::after {
+		&::after {
 			background-image: url(svg-themed("i/collapse"));
 
 			.oe-patient-popup & {
@@ -68,11 +69,12 @@
 		}
 
 		&::after {
+			// icon shows interaction
 			opacity: 1;
 		}
 
-		// make like a blue button
-		// see WHO checklist in the OpNote
+		// If .highlighter is used, make it like behave like a blue button
+		// (see WHO checklist in the OpNote)
 		.highlighter {
 			color: #fff;
 			background: $oe-btn-blue;
