Sidebar list controls UI improvements

--- a/src/sass/3/openeyes/components/sem/sidebar/__all.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/__all.scss
@@ -8,7 +8,7 @@
 // VIEW states
 @import "_base";
 @import "pathway";
-@import "list-controls";
+@import "sidebar-list-controls";
 
 // Event list
 @import "event-list/_all";
