Missed an issue with sidebar-list-controls in Admin area

--- a/src/sass/3/openeyes/components/sem/sidebar/_sidebar-list-controls.scss
+++ b/src/sass/3/openeyes/components/sem/sidebar/_sidebar-list-controls.scss
@@ -12,12 +12,15 @@
 
 	button {
 		flex: 1 1 0;
-		// be sure to overwrite any disabled pseudo class
-		background-color: $oe-dark-user-inputs !important;
 
-		.oe-i {
-			// invert to white  light theme
-			filter: $oe-btn-icon-hover;
+		.sidebar-eventlist & {
+			// SEM Event-list is dark fixed, Admin isn't!
+			// for SEM overwrite any disabled pseudo class
+			background-color: $oe-dark-user-inputs !important;
+			.oe-i {
+				// invert to white  light theme
+				filter: $oe-btn-icon-hover;
+			}
 		}
 	}
 
