--- a/src/sass/3/openeyes/ui/lists/_dot-list.scss
+++ b/src/sass/3/openeyes/ui/lists/_dot-list.scss
@@ -2,9 +2,9 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 ul.dot-list {
-	margin: 2px 0 0 0;
 	display: flex;
 	flex-wrap: wrap;
+	margin: 2px 0 0 0;
 
 	li {
 		@include inline-flex(center, flex-start);
@@ -19,9 +19,9 @@ ul.dot-list {
 			background-image: none;
 		}
 
-		// dot-list are also used for User comments, paragraph breaks need clearly showing
+		// allow a "paragraph" break as in "notes-list"
 		&.paragraph {
-			background: left center / 1em url(svg-all("ui/list-para-break")) no-repeat;
+			background: left center / 1em url(svg-all("ui/type-paragraph")) no-repeat;
 			padding-left: 1.5em;
 		}
 	}
@@ -29,7 +29,6 @@ ul.dot-list {
 	// if the dot-list is used inline with other elements need to remove the leading
 	&.inline {
 		margin: 0;
-
 		li {
 			margin: 0;
 		}
