Added in new edit icon

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -267,6 +267,7 @@
 		"save-plus": "add",
 		"add": "add",
 		"add-blue": "add-blue",
+		"edit": "edit",
 		"edit-blue": "edit-blue",
 		"cancel": "cancel",
 		"finish": "finish",
