--- a/src/sass/3/openeyes/ui/collapsible/pro-standard/_pro-data-view.scss
+++ b/src/sass/3/openeyes/ui/collapsible/pro-standard/_pro-data-view.scss
@@ -16,6 +16,7 @@
 	.pro-standard-btn {
 		// make the icon expand to fill the area
 		align-self: stretch;
+		margin:0 0 0 5px;
 		.oe-i {
 			width: 25px;
 			height: 100%;
