Updates to Diagnosis v2 and new icon: tick-circle

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -201,6 +201,7 @@
 		"forward": "rotate-right", // rotate-right
 		"rotate-right": "rotate-right", // rotate-right
 		"tick": "tick",
+		"tick-circle": "tick-circle",
 		"triangle": "triangle",
 		"time": "time",
 		"audit-trail": "audit-trail",
